--- a/movies/build.gradle
+++ b/movies/build.gradle
@@ -42,6 +42,10 @@ dependencies {
     // Glide
     api "com.github.bumptech.glide:glide:3.8.0"
 
+    //Rx
+    implementation "io.reactivex:rxandroid:1.2.1"
+    implementation "io.reactivex:rxjava:1.3.0"
+
     // Unit Tests
     testImplementation "junit:junit:4.12"
     testImplementation "org.hamcrest:hamcrest-all:1.3"
