--- a/moviedbservice/build.gradle
+++ b/moviedbservice/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
@@ -38,6 +39,9 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:2.5.0"
     implementation "com.squareup.retrofit2:converter-gson:2.5.0"
     implementation "com.squareup.retrofit2:adapter-rxjava:2.5.0"
+    implementation "com.squareup.okhttp3:okhttp:3.12.0"
+    compile 'com.squareup.okhttp3:logging-interceptor:3.10.0'
+
 
     api "com.jakewharton.timber:timber:4.7.1"
 
