Created a module for movie detail

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include ':app', ':moviedbservice', ':coreapp', ':movies'
+include ':app', ':moviedbservice', ':coreapp', ':movies', ':moviedetail'
 rootProject.name='Filmes Populares'
