implementing Screen Navigator and some fix

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ android {
 
 dependencies {
     implementation project(path: ':movies')
+    implementation project(path: ':moviedetail')
     implementation project(path: ':moviedbservice')
     implementation project(path: ':coreapp')
 
